--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -329,16 +329,18 @@ Baada ya kuingia ndani na account ya **github** nita **bofya** kitufe kilicho an
 Bilashaka umefanikiwa kuona **kipengele** cha **react** kikipachikwa kwenye HTML DOM na kikitolewa kwenye **kivinjari** chako
 umeona mnyororo wa bomba la upelekeji na uendlezaji application upande-wambele.
 
-Naam, baada ya dom kutubainikia na JSX kujitokeza ingependeza kama tunge viangalia vipengele vya react 
-kwa ndani kidogo ilikuweza kuielewa na kuitumia React kwa ufasaha kwenye kuendeleza au kujenga
+Baada ya dom kutubainikia na JSX kujitokeza ingependeza kama tunge viangalia vipengele vya react 
+kwa ndani kidogo ilikuweza kuelewa dhana na kuitumia React kwa ufasaha kwenye kuendeleza au kujenga
 **vipengela anavyo ingiliana navyo mtumiaji** kwa maana ya **"user interfaces" (UI)** kwenye muktadha huu.
 
-Kumbuka tu kwamba **kipengele** cha reat ni **kazi** ya javascript ambayo unaweza kuiwekea madegeshee kwa kutumia alama za juu 
+Kumbuka tu kwamba **kipengele** cha reat ni **kazi** ya javascript ambayo unaweza kuiwekea nakshi kwa kutumia alama za juu 
 kitaalam tuna sema **Functional Component** ili kuweza kuzielewa...twende kwa vitendo 
 
 
 Anza naku tengeneza faili `List.js` kwenye directory ya `Component` jina unaweza kuita 
-chochote ili mradi liwe namantiki kwa wengine watakao soma code zako. weka
+chochote ili mradi liwe namantiki kwa wengine watakao soma code zako. 
+
+[embedded example](embedded-codesandbox:https://codesandbox.io/embed/lingering-river-knq4gs?fontsize=14&hidenavigation=1&theme=dark)
 
 
 
