--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -340,7 +340,7 @@ kitaalam tuna sema **Functional Component** ili kuweza kuzielewa...twende kwa vi
 Anza naku tengeneza faili `List.js` kwenye directory ya `Component` jina unaweza kuita 
 chochote ili mradi liwe namantiki kwa wengine watakao soma code zako. 
 
-[embedded example](embedded-codesandbox:https://codesandbox.io/embed/lingering-river-knq4gs?fontsize=14&hidenavigation=1&theme=dark)
+[embedded example](embedded-codesandbox://s/lingering-river-knq4gs)
 
 
 
