--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -342,7 +342,12 @@ chochote ili mradi liwe namantiki kwa wengine watakao soma code zako.
 
 [embedded example](embedded-codesandbox://s/lingering-river-knq4gs)
 
-
+<iframe src="https://codesandbox.io/embed/lingering-river-knq4gs?fontsize=14&hidenavigation=1&theme=dark"
+     style="width:100%; height:500px; border:0; border-radius: 4px; overflow:hidden;"
+     title="lingering-river-knq4gs"
+     allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
+     sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"
+   ></iframe>
 
 
 
