--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -342,8 +342,7 @@ chochote ili mradi liwe namantiki kwa wengine watakao soma code zako.
 
 [embedded example](embedded-codesandbox://s/lingering-river-knq4gs)
 
-<iframe src="https://codesandbox.io/api/v1/sandboxes/define?embed=1&parameters=N4IgZglgNgpgziAXKADgQwMYGs0HMYB0AVnAPYB2SoGFALjObVSOWgLYxIgwAe7KsEAF8hAGhARyAE14EAFrTZRmNRgyaIQAHgVKAfFoBGpKQE8DAemNnLuqHuHjJMnsQTIQq-oy6q4tAAIwUlIAgF4AgB0QQzQAJ2iAbmERIA&query=hidenavigation%3D1%26view%3Dpreview" style="width:100%; height:500px; border:0; border-radius: 4px; overflow:hidden;\\" sandbox="allow-modals allow-forms allow-popups allow-scripts allow-same-origin"></iframe>
-
+This is a beautiful iframe:
 
 
 
