--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -344,7 +344,7 @@ chochote ili mradi liwe namantiki kwa wengine watakao soma code zako.
 
 This is a beautiful iframe:
 
-
+<iframe src="https://codesandbox.io/embed/lingering-river-knq4gs" width="600" height="400"></iframe>
 
 
 
