--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -346,6 +346,10 @@ This is a beautiful iframe:
 
 <iframe src="https://codesandbox.io/embed/lingering-river-knq4gs" width="600" height="400"></iframe>
 
+This is a beautiful iframe: is this what you want 
+
+ <iframe src="https://codesandbox.io/embed/flamboyant-butterfly-qvlys8" width="600" height="400"></iframe>
+
 
 
 
