--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -340,6 +340,38 @@ kitaalam tuna sema **Functional Component** ili kuweza kuzielewa...twende kwa vi
 Anza naku tengeneza faili `List.js` kwenye directory ya `Component` jina unaweza kuita 
 chochote ili mradi liwe namantiki kwa wengine watakao soma code zako. 
 
+```javascript
+import React from 'react';
+
+function List() {
+  const salaam = 'Habari Function Component!';
+
+  return <h1>{salaam}</h1>;
+}
+
+export default List;
+```
+
+kwenye file la `App.js` ndipo napotaka kuvipangilia vipengele vyangu alafu kwenye `index.js` nita 
+ita kipengele **App** pekeyake, hii inatoa wepesi wakupangilia vipengele vinavyo tengeneza application
+kuliko kua na faili moja kubwa pale application inavyozidi kua kubwa usimamizi wa hilo faili 
+na ufanisi wa application kwa ujumla inakua ni changamoto.
+
+
+```javascript
+import "./styles.css";
+import List from "./components/List";
+
+export default function App() {
+  return (
+    <div className="App">
+      <List />
+    </div>
+  );
+}
+```
+
+
 [embedded example](embedded-codesandbox://s/lingering-river-knq4gs)
 
 This is a beautiful iframe:
