--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -393,6 +393,29 @@ hilo natumia Fragment
 
 **JSX**
 
+kwavile vipegele vya react nikazi za javascript, kurudisha javascript kwenye JSX
+inakulazimu uweke javascript kwenye mabano mustachi `{} `**cul brec** 
+
+
+```javascript
+import React from 'react';
+
+function List() {
+  const salaam = 'Habari Function Component!';
+
+  return <h1>{salaam}</h1>;
+}
+
+export default List;
+```
+
+kazi ya kipengele ni kurudisha jsx, Sheria za Es6 zimetumika kwenye kazi ambayo ni tamko la salaam 
+ambayo imerudishwa kwenye mabano mustachi `{} `**cul brec** kama nilivyo fanya
+kurudisha salaam
+
+
+
+
 
 
 
