--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -414,6 +414,12 @@ ambayo imerudishwa kwenye mabano mustachi `{} `**cul brec** kama nilivyo fanya
 kurudisha salaam
 
 
+
+Sheria za Es6 zimetumika kwa mara nyingine tena,
+safari hii nikwenye kuweka matamko kwenye ngazi ya kitalu
+kwa kutumia mabano mustachi tunapata wepesi wakuandika javascript kwenye JSX kuathiri 
+vipengle vya html kirahisi ndani ya javasript 
+
 ```javascript
 const person = {
   name: 'Gregorio Y. Zara',
@@ -442,6 +448,10 @@ export default function TodoList() {
 }
 ```
 
+
+
+
+naporudisha jsx napitasha javascript kwenye mabano mustachi **curly bre** 
 
 
 
