--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -418,7 +418,9 @@ kurudisha salaam
 Sheria za Es6 zimetumika kwa mara nyingine tena,
 safari hii nikwenye kuweka matamko kwenye ngazi ya kitalu
 kwa kutumia mabano mustachi tunapata wepesi wakuandika javascript kwenye JSX kuathiri 
-vipengle vya html kirahisi ndani ya javasript 
+vipengle vya html kirahisi ndani ya javasript zingatia jinsi ninavyo pitisha varible na visifa vyake
+kwenye jsx ili kuathiri kipengele cha htm ninacho hitaji {person.theme} kisifu kikipitisha thamani kathaa kama vile
+ backgroundColor na color thamani ya "jina" iliyo pitishwa kwenye kisifa 
 
 ```javascript
 const person = {
