--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -418,13 +418,13 @@ Sheria za Es6 zimetumika kwa mara nyingine tena,
 safari hii nikwenye kuweka matamko kwenye ngazi ya kitalu
 kwa kutumia mabano mustachi tunapata wepesi wakuandika javascript kwenye JSX kuathiri 
 vipengle vya html kirahisi ndani ya javasript zingatia jinsi ninavyo pitisha varible na visifa vyake
-kwenye jsx ili kuathiri kipengele cha htm ninacho hitaji `{person.theme}` kisifu kikipitisha thamani kathaa kama vile
- backgroundColor na color thamani ya "jina" iliyo pitishwa kwenye kisifa 
+kwenye jsx ili kuathiri kipengele cha htm ninacho hitaji `{mtumiaji.theme}` kisifu kikipitisha thamani kathaa kama vile
+ backgroundColor na color kupitisha **jina** kama kisifu cha **mtumiaji**  `{mtumiaji.jina}` 
 
 
 ```javascript
-const person = {
-  name: 'Gregorio Y. Zara',
+const mtumiaji = {
+  jina: 'Gregorio Y. Zara',
   theme: {
     backgroundColor: 'black',
     color: 'pink'
@@ -433,8 +433,8 @@ const person = {
 
 export default function TodoList() {
   return (
-    <div style={person.theme}>
-      <h1>{person.name}'s Todos</h1>
+    <div style={mtumiaji.theme}>
+      <h1>{mtumiaji.jina}'s Todos</h1>
       <img
         className="avatar"
         src="https://i.imgur.com/7vQD0fPs.jpg"
