--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -453,7 +453,7 @@ export default function TodoList() {
 
 
 Kama ukitaka kutoa kipengele cha react ndani ya kipele cha kazi 
-utafafanua kipengele kingine nakutoa kama kipengele cha Ht/ml kwa kutumia JSX 
+utafafanua kipengele kingine nakutoa kama kipengele cha Html kwa kutumia JSX 
 kwenye kipengele kingine 
 
 ```javascript
