--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -473,6 +473,17 @@ export default List;
 
 
 
+```javascript
+ const greeting = 'Habari kutoka Function Component!';
+
+  return <Headline value={salaam} />;
+}
+
+function Headline(props) {
+  return <h1>{props.value}</h1>;
+}
+
+```
 
 
 
