--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -389,7 +389,10 @@ kurudisha html badala ya kurudisha jsx na matokeo yake ni kosa lakishiri kujitok
 
 njia iliyo sahihi yakuandika jsx ni hii hapa, angali jinsi kila kipengele kilivyo funguliwa na kufungwa, wakati ambapo
 ningeweza kuweka kila kitu kwenye `<div>` ningeweza nikajikuta natengeneza soup ya **div** ambayo haina mnywaji kuepuka
-hilo natumia Fragment
+hilo natumia Fragment `<> </>` na hii ni kwa sababu Jsx nyuma yapazia inabadilishwa nakua kitu cha javascript hauwezi kurudisha vitu 
+viwili kutoka kwenye kazi bila kufunga kwenye array "safu" kwa hoja hii huwezi kurudisha tag mbili za jsx bila kuzifunga kwenye tag
+nyingine au Fragment
+
 
 **JSX**
 
