--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -405,7 +405,7 @@ kurudisha html badala ya kurudisha jsx na matokeo yake ni kosa lakishiri kujitok
 njia iliyo sahihi yakuandika jsx ni hii hapa, angali jinsi kila kipengele kilivyo funguliwa na kufungwa, wakati ambapo
 ningeweza kuweka kila kitu kwenye `<div>` ningeweza nikajikuta natengeneza soup ya **div** ambayo haina mnywaji kuepuka
 hilo natumia **Fragment** `<> </>` na hii ni kwa sababu **Jsx** nyuma yapazia inabadilishwa nakua **kitu cha javascript** hauwezi kurudisha vitu viwili kutoka kwenye kazi bila kufunga kwenye **array** "safu" kwa hoja hii huwezi kurudisha tag mbili za jsx bila kuzifunga kwenye tag
-nyingine au Fragment
+nyingine au **Fragment**
 
 
 **JSX**
@@ -426,7 +426,8 @@ nyingine au Fragment
     </>
 ```
 
-kwavile vipegele vya react nikazi za javascript, kurudisha javascript kwenye JSX
+kwavile vipegele vya react nikazi za javascript, 
+kurudisha javascript kwenye JSX
 inakulazimu uweke javascript kwenye mabano mustachi `{} `**curly brackets** 
 
 
@@ -445,10 +446,10 @@ imerudishwa kwenye mabano mustachi `{}` kama `{salaam}`
 
 **props ni tarifa ambazo unazipitisha kwenye jsx**
 
-vipengele vya react vina tumia props kupitisha data, kipengele ambacho ni mzazi kitatumia 
+vipengele vya react vina tumia **props** kupitisha data, kipengele ambacho ni mzazi kitatumia 
 props kupitisha data kwa kipengele mtoto na siyo kinyume
 
-kuzielewa props kwa vitendo vingatia
+kuzielewa props kwa vitendo zingatia
 
 **App.js**
 
