--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -326,10 +326,10 @@ Baada ya kuingia ndani na account ya **github** nita **bofya** kitufe kilicho an
 
 ![React component deployed vercel](https://i.ibb.co/ThY8VZ6/Install-vercel5.jpg)
 
-Bilashaka umefanikiwa kuona **kipengele** cha **react** kikipachikwa kwenye HTML DOM na kikitolewa kwenye **kivinjari** chako
+Bilashaka umefanikiwa kuona **kipengele** cha **react** kikipachikwa kwenye **HTML DOM** na kikitolewa kwenye **kivinjari** chako
 umeona mnyororo wa bomba la upelekeji na uendlezaji application upande-wambele.
 
-Baada ya dom kutubainikia na JSX kujitokeza ingependeza kama tunge viangalia vipengele vya react 
+Baada ya **DOM** kutubainikia na **JSX** kujitokeza ingependeza kama tunge viangalia vipengele vya react 
 kwa ndani kidogo ilikuweza kuelewa dhana na kuitumia React kwa ufasaha kwenye kuendeleza au kujenga
 **vipengela anavyo ingiliana navyo mtumiaji** kwa maana ya **"user interfaces" (UI)** kwenye muktadha huu.
 
@@ -440,7 +440,7 @@ const List = () => {
 export default List;
 ```
 
-kazi ya kipengele ni kurudisha jsx, Sheria za Es6 zimetumika kwenye kazi ambayo ni variable  
+kazi ya kipengele ni kurudisha jsx, Sheria za Es6 zimetumika kwenye kazi ambayo ni variable 
 imerudishwa kwenye mabano mustachi `{}` kama `{salaam}`
 
 
