--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -329,6 +329,22 @@ Baada ya kuingia ndani na account ya **github** nita **bofya** kitufe kilicho an
 Bilashaka umefanikiwa kuona **kipengele** cha **react** kikipachikwa kwenye **HTML DOM** na kikitolewa kwenye **kivinjari** chako
 umeona mnyororo wa bomba la upelekeji na uendlezaji application upande-wambele.
 
+Ngoja kidogo siyo haraka kihivyo...tunachangamoto kwenye code sijasema bug
+nyenzo tuliyo tumia **ReactDOM** njia hii ni yakizamiani na taratibu, uzamani labda si yo
+issue sana lakini kwenye utaratib hapa kuna ukakasi utaribu wenye haswa
+una sababishwa na kilekitendo chake cha kuto tene kipengele moja kwa moja kwenye **DOM** husika 
+
+mfano kipengele kwenye **DOM** kinapo badilika **DOM** itatoa tena kipengele na watotowake wote 
+
+linapokuja kwenye swala lakujenga application za mtandaoni 
+ambazo ni za hali ya juu **mwingiliano** unakua mkubwa na **hali** hubadilika mara kwa mara
+
+kutatua changamoto hii tengeneza branch kwenye hii rapasatory kwa kufanya hivi
+
+
+
+
+
 Baada ya **DOM** kutubainikia na **JSX** kujitokeza ingependeza kama tunge viangalia vipengele vya react 
 kwa ndani kidogo ilikuweza kuelewa dhana na kuitumia React kwa ufasaha kwenye kuendeleza au kujenga
 **vipengela anavyo ingiliana navyo mtumiaji** kwa maana ya **"user interfaces" (UI)** kwenye muktadha huu.
