--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -330,11 +330,11 @@ Bilashaka umefanikiwa kuona **kipengele** cha **react** kikipachikwa kwenye **HT
 umeona mnyororo wa bomba la upelekeji na uendlezaji application upande-wambele.
 
 Ngoja kidogo siyo haraka kihivyo...tunachangamoto kwenye code sijasema bug
-nyenzo tuliyo tumia **ReactDOM** njia hii ni yakizamiani na taratibu, uzamani labda si yo
-issue sana lakini kwenye utaratib hapa kuna ukakasi utaribu wenye haswa
-una sababishwa na kilekitendo chake cha kuto tene kipengele moja kwa moja kwenye **DOM** husika 
+nyenzo tuliyo tumia **ReactDOM** njia hii ni yakizamiani na taratibu, uzamani labda si yo 
+hoja sana lakini kwenye utaratib hapa kuna ukakasi utaribu wenye haswa
+una sababishwa na iletabia yake ya kuto tene kipengele moja kwa moja kwenye **DOM** husika 
 
-mfano kipengele kwenye **DOM** kinapo badilika **DOM** itatoa tena kipengele na watotowake wote 
+**mfano** *kipengele kwenye **DOM** kinapo badilika **DOM** itatoa tena kipengele na watotowake wote* 
 
 linapokuja kwenye swala lakujenga application za mtandaoni 
 ambazo ni za hali ya juu **mwingiliano** unakua mkubwa na **hali** hubadilika mara kwa mara
