--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -347,7 +347,7 @@ Bilashaka unaona kitu kamahiki, sasa twende tukafanye marekebisho kwenye code
 
 ![github_branch](https://i.ibb.co/L9rL2QY/github-branch-dev.png)
 
-sasisha faili la index.js nauweke, ukimaliza bofya hapo palipo andikwa **commit changes**
+kwa kutumia kisasisha cha github sasisha faili la index.js nauweke hizi code, ukimaliza bofya hapo palipo andikwa **commit changes**
 
 ```javascript
 import { StrictMode } from "react";
@@ -363,20 +363,20 @@ root.render(
 );
 ```
 
-sasa hivi tuna matoleo mawili ambayo tumesha ya peleka **deployments** nayo ni **production** na **preview**, 
+sasa hivi tuna matoleo mawili ambayo tumesha ya peleka **"deploy"** nayo ni **production** na **preview**, 
 **prieview** ikiwa inatokana na **tawi** la **dev** ambayo hasa ni nakala ya tawi la **main** 
 
 ili kuhakikisha tawi letu ambalo liko kazini kiuzalishaji zaidi linakwenda sawa na tawi
-lamajaribio nililon liita **dev** nitayalinga nisha mata haya na kulivuta lile lilo jipya kuliko mwezaka
+la majaribio nililon liita **dev** nitayalinganisha matawi haya na kulivuta lile lilo jipya kuliko mwezaka
 kwa kufanya hivi bofya hapo palipo andikwa **compare & pull request**
 
 ![github_pull_req](https://i.ibb.co/kq8r5rQ/github-compare-andpull.png)
 
-Utaendelea nakubofya hapo palipo andikwa **create pull request**
+Utaendelea naku bofya hapo palipo andikwa **create pull request**
 
-![github_creat_pull_req]https://i.ibb.co/qdjB71V/github-creat-pul-req.png[/img]
+![github_creat_pull_req](https://i.ibb.co/qdjB71V/github-creat-pul-req.png)
 
-Utaendelea naku unganisha **Merge**
+Kuunganisha **"Merge"** utafanya hivi
 
 ![github_mergpull_req](https://i.ibb.co/qBp6ckH/github-merge-pull-req.png)
 
