--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -363,7 +363,18 @@ root.render(
 );
 ```
 
-sasa hivi tuna matoleo mawili ambayo tumesha ya peleka **"deploy"** nayo ni **production** na **preview**, 
+`createRoot` **React** itatengeneza mzizi kwenye **Domnode**, na kuchua utawala wa dom ndani yake
+react dom ni dom ya natharia **"virtual"** ukiachilia mbali uwezo wa virtual dome 
+kufanya kazi kwenye kumbukumbu ya browser, pale yanapotoke mabadiliko 
+virtual Dom italinganisha na Dom asili naku sasisha vipengele vilivyo badilika kwenye Dom asili 
+hii inaongeza ufanisi kwa viwango vya hali ya juu
+
+
+baada ya kutengeneza mzizi wa dom ambao nime uita "root" kwa lengo lakuonyesha mauthui
+kwenye Dom kivinjari nita tumia `root.render` 
+
+
+Sasa hivi tuna matoleo mawili ambayo tumesha ya peleka **"deploy"** nayo ni **production** na **preview**, 
 **prieview** ikiwa inatokana na **tawi** la **dev** ambayo hasa ni nakala ya tawi la **main** 
 
 ili kuhakikisha tawi letu ambalo liko kazini kiuzalishaji zaidi linakwenda sawa na tawi
@@ -384,12 +395,6 @@ Kuunganisha **"Merge"** utafanya hivi
 **thibitisha kuunganisha na mara baada ya kuthibisha ukirudi kwenye code ukiwa kwenye 
 tawi kuu **main** haitakuwa na utofauti na ile ya **dev**
 
-
-
-
-
-
-**React Virtual Dom**
 
 
 Baada ya **DOM** kutubainikia na **JSX** kujitokeza ingependeza kama tunge viangalia vipengele vya react 
