--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -363,8 +363,8 @@ root.render(
 );
 ```
 
-`createRoot` **React** itatengeneza mzizi kwenye **Domnode**, na kuchua utawala wa dom ndani yake
-react dom ni dom ya natharia **"virtual"** ukiachilia mbali uwezo wa virtual dome 
+`createRoot` **React** itatengeneza mzizi kwenye **Domnode**, na kuchua utawala wa dom ndani yake.
+React dom ni dom ya natharia **"virtual Dom"**, ukiachilia mbali uwezo wa virtual dome 
 kufanya kazi kwenye kumbukumbu ya browser, pale yanapotoke mabadiliko 
 virtual Dom italinganisha na Dom asili naku sasisha vipengele vilivyo badilika kwenye Dom asili 
 hii inaongeza ufanisi kwa viwango vya hali ya juu
