--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -365,13 +365,13 @@ root.render(
 
 `createRoot` **React** itatengeneza mzizi kwenye **Domnode**, na kuchua utawala wa dom ndani yake.
 React dom ni dom ya natharia **"virtual Dom"**, ukiachilia mbali uwezo wa virtual dome 
-kufanya kazi kwenye kumbukumbu ya browser, pale yanapotoke mabadiliko 
+kufanya kazi kwenye kumbukumbu ya kivinjari, pale yanapotoke mabadiliko 
 virtual Dom italinganisha na Dom asili naku sasisha vipengele vilivyo badilika kwenye Dom asili 
 hii inaongeza ufanisi kwa viwango vya hali ya juu
 
 
 baada ya kutengeneza mzizi wa dom ambao nime uita "root" kwa lengo lakuonyesha mauthui
-kwenye Dom kivinjari nita tumia `root.render` 
+kwenye Dom kivinjari nimetumia `root.render` 
 
 
 Sasa hivi tuna matoleo mawili ambayo tumesha ya peleka **"deploy"** nayo ni **production** na **preview**, 
