--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -143,6 +143,7 @@ hadi **github**.
 Kutengeneza hazina github itabidi uwe na **account** github 
 kama huna jisajili alafu uingie github, na kufanya ifuatavyo,
 
+![img](https://i.ibb.co/SswF92T/github-branch2.png)
 
 ![img](https://i.ibb.co/Pt92z6Y/github-create-newrepo.jpg)
 
