--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -145,16 +145,16 @@ kama huna jisajili alafu uingie github, na kufanya ifuatavyo,
 
 ![img](https://i.ibb.co/SswF92T/github-branch2.png)
 
-![img](https://i.ibb.co/Pt92z6Y/github-create-newrepo.jpg)
-
-
-![img](https://i.ibb.co/m4nY254/git-new-repo.jpg)
+![img](https://i.ibb.co/HXn6b4v/github-create-newrepo2.jpg)
 
 
 
-![img](https://i.ibb.co/cQ7p0c5/github-create-new-repo.jpg)
+
+[img](https://i.ibb.co/4s17fgs/github-new-repository.png)
 
 
+
+[img](https://i.ibb.co/gjjL0Kv/github-reposatory.png)
 
 
 
