--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -80,7 +80,7 @@ hu rekodiwa kwa hiyo unaweza kurejea ikihitajika
 
 **Git**
 mfumo mahususi wa udhibiti wa toleo ulio sambanzwa ambao chanzo chake cha code kipo wazi ulianzishwa na Linus Torvalds mwaka 2005.
-tafsiri yake ni kwamba chanzo cha code na historia inapatikana kwenye computer ya kila mwendelezaji na kurahisisha utowaji wa matawi na unganishaji
+Tafsiri yake ni kwamba chanzo cha code na historia inapatikana kwenye computer ya kila mwendelezaji na kurahisisha utowaji wa matawi na unganishaji
 
 
 usanifu wa code utakua unazingatia kanuni za ECMAScript 6 === ES6
