--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -137,13 +137,15 @@ kama node kwenye huu mti. Kwa kutumia javascript tunaweza kuzifikia hizi node na
 **Dom** inawezeshe javascript kusasisha ukurasa wa tovuti kwa urahisi 
 
 Bilashaka Mpaka hapa umekwisha pata twaswira zuri ya nyenzo ambazo tunazitumia, tutoke 
-kwenye nadharia hadi kwenye vitendo kwa tufunge safari 
+kwenye nadharia hadi kwenye vitendo kwa kufunge safari 
 hadi **github**. 
 
 Kutengeneza hazina github itabidi uwe na **account** github 
 kama huna jisajili alafu uingie github, na kufanya ifuatavyo,
 
 ![img](https://i.ibb.co/SswF92T/github-branch2.png)
+
+![img](https://i.ibb.co/SswF92T/github-branch.png)
 
 ![img](https://i.ibb.co/HXn6b4v/github-create-newrepo2.jpg)
 
