--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -143,17 +143,14 @@ hadi **github**.
 Kutengeneza hazina github itabidi uwe na **account** github 
 kama huna jisajili alafu uingie github, na kufanya ifuatavyo,
 
-![github_branch](https://i.ibb.co/Pt92z6Y/github-create-newrepo.jpg)
-
-![github_branch](https://i.ibb.co/KDgxQSx/github-branch.png)
-
-![img](https://i.ibb.co/SswF92T/github-branch2.png)
-
-![img](https://i.ibb.co/SswF92T/github-branch.png)
-
-![img](https://i.ibb.co/HXn6b4v/github-create-newrepo2.jpg)
+![github_repo_new](https://i.ibb.co/Pt92z6Y/github-create-newrepo.jpg)
 
 
+![github_repo_create](https://i.ibb.co/m4nY254/git-new-repo.jpg)
+
+
+
+![github_repo](https://i.ibb.co/cQ7p0c5/github-create-new-repo.jpg)
 
 
 
