--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -317,6 +317,12 @@ Ili kuweza kukiona hicho kipengele **copy** link ya hazina yako alafu uchanja mb
 
 Baada ya kuingia ndani na account ya **github** nita **bofya** kitufe kilicho andikwa **new repo** alafu nita **bofya impor git repository** naku **paste** ile **link** ya **hathina** yangu kwa vile ni mara ya kwanza intanilazimu ni **install** app ya **Vercel**, github. Ili kuipa uwezo **vercel** kusoma na kuandika kwenye **hathina** zangu za **Github** angalia hapa 
 
+![vercel_app_ins](https://i.ibb.co/ws7yBYc/Install-vercel1.jpg)
+![vercel_app_ins](https://i.ibb.co/TqRFx6H/Install-vercel2.jpg)
+![vercel_run_app](https://i.ibb.co/jf9fQQ5/Install-vercel3.jpg)
+![vercel_run_app](https://i.ibb.co/zVZfZng/Install-vercel4.jpg)
+![vercel_react_app](https://i.ibb.co/ThY8VZ6/Install-vercel5.jpg)
+
 
 Bilashaka umefanikiwa kuona **kipengele** cha **react** kikipachikwa kwenye **HTML DOM** na kikitolewa kwenye **kivinjari** chako
 umeona mnyororo wa bomba la upelekeji na uendlezaji application upande-wambele.
