--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -317,7 +317,7 @@ Ili kuweza kukiona hicho kipengele **copy** link ya hazina yako alafu uchanja mb
 
 Baada ya kuingia ndani na account ya **github** nita **bofya** kitufe kilicho andikwa **new repo** alafu nita **bofya impor git repository** naku **paste** ile **link** ya **hathina** yangu kwa vile ni mara ya kwanza intanilazimu ni **install** app ya **Vercel**, github. Ili kuipa uwezo **vercel** kusoma na kuandika kwenye **hathina** zangu za **Github** angalia hapa 
 
-![img]https://i.ibb.co/ZcV17wS/Install-vercel1.jpg[/img]
+![img](https://i.ibb.co/ZcV17wS/Install-vercel1.jpg)
 
 
 after edit
