--- a/content/technology/4-things-every-programmer-should-know/post.mdx
+++ b/content/technology/4-things-every-programmer-should-know/post.mdx
@@ -231,7 +231,7 @@ src
 README.MD
 package.json
 ```
-
+test
 Umepata taswira! Tusonge mbele tengeneza faili jingine na kuliita `package.json`  faili hili maranyingi lina kaa kwenye mzizi wa application yako, ili kulitengeneza hili faili github utafanya hivi
 ![github tengeneza faili ](https://i.ibb.co/LvMvWRT/github-create-file.jpg)
 weka.
