--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -181,7 +181,7 @@ package.json
 Umepata taswira! Tusonge mbele tengeneza faili na kuliita `package.json`  faili hili maranyingi lina kaa kwenye mzizi wa application yako, ili kulitengeneza hili faili github utafanya hivi
 
 
-
+![img](https://i.ibb.co/KjyJ224/github-create-fileedit11.jpg)
 
 
 weka.
