--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -302,8 +302,8 @@ Baada ya kuagiza hizo **maktaba** ni wakati waku **zitumia**, ili **kutoa kipeng
 
 Wala sisahau kutupia aina flani ya msaidizi **React.StrictMode** ambaye atatusaidia kuandika vipengele  vya react vyenye **ubora** kwakua inatoa **onyo** kwenye **console** pale kunapotokea **ukiukaji** wa **sheria** wakati tunatengeneza **vipengele**. Tukiwa bado tunazungumzia **vipengele** kuleta athari kwenye alama za juu za html na tumia extension ya `javascript` inayo julikana kama `JSX`, 
 hii itatuwezesha kuandika alama za juu za html kwenye javascript, 
-wala usihofu kuhusu kubadilishwa kutoka jsx kwenda  **javascript** kwani nyenzo tutakazo tumia kuendesha code vascel, sandbox
-na zile za `Create React App` au `Next.js` nk,  `JSX transform` , `Babel` na `TypeScript` zimekwisha wezeshwa nakufanyiwa configuration
+wala usihofu kuhusu kubadilishwa kutoka jsx kwenda  **javascript** kwani nyenzo tutakazo tumia kuendesha code **vascel**, **sandbox**
+na zile za **Create React App** au **Next.js** nk,  `JSX transform` , `Babel` na `TypeScript` zimekwisha wezeshwa nakufanyiwa configuration
  
 kuweka kwenye **DOM** tunatumia `document.getElementById('root')` msisitizo ukiwa kwenye **“root”** DOM node 
 
