--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -327,7 +327,7 @@ Baada ya kuingia ndani na account ya **github** nita **bofya** kitufe kilicho an
 ![vercel_run_app](https://i.ibb.co/2d9YKN8/Install-vercel3-3.jpg)
 
 
-![[vercel_run_app](https://i.ibb.co/GTxSb2Z/Install-vercel4.jpg)
+![vercel_run_app](https://i.ibb.co/GTxSb2Z/Install-vercel4.jpg)
 
 
 ![vercel_react_app](https://i.ibb.co/b3jzv6K/Install-vercel5.jpg)
