--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -371,18 +371,18 @@ root.render(
 ```
 
 `createRoot` **React** itatengeneza mzizi kwenye **Domnode**, na kuchukua utawala wa dom ndani yake.
-React dom ni dom ya natharia **"virtual Dom"**, ukiachilia mbali uwezo wa virtual dom
+React dom ni dom ya nadharia **"virtual Dom"**, ukiachilia mbali uwezo wa virtual dom
 kufanya kazi kwenye kumbukumbu ya kivinjari, pale yanapotoke mabadiliko 
 virtual Dom italinganisha na Dom asili naku sasisha vipengele vilivyo badilika kwenye Dom asili 
 hii inaongeza ufanisi kwa viwango vya hali ya juu
 
 
 baada ya kutengeneza mzizi wa dom ambao nime uita "root" kwa lengo lakuonyesha mauthui
-kwenye Dom kivinjari natumia `root.render` 
+kwenye Dom natumia `root.render` 
 
 
 Sasa hivi tuna matoleo mawili ambayo tumesha ya peleka **"deploy"** nayo ni **production** na **preview**, 
-**prieview** ikiwa inatokana na **tawi** la **dev** ambayo hasa ni nakala ya tawi la **main** 
+**preview** ikiwa inatokana na **tawi** la **dev** ambayo hasa ni nakala ya tawi la **main** 
 
 ili kuhakikisha tawi letu ambalo liko kazini kiuzalishaji zaidi linakwenda sawa na tawi
 la majaribio nililon liita **dev** nitayalinganisha matawi haya na kulivuta lile lilo jipya kuliko mwezaka
