--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -385,7 +385,7 @@ Sasa hivi tuna matoleo mawili ambayo tumesha ya peleka **"deploy"** nayo ni **pr
 **preview** ikiwa inatokana na **tawi** la **dev** ambayo hasa ni nakala ya tawi la **main** 
 
 ili kuhakikisha tawi letu ambalo liko kazini kiuzalishaji zaidi linakwenda sawa na tawi
-la majaribio nililon liita **dev** nitayalinganisha matawi haya na kulivuta lile lilo jipya kuliko mwezaka
+la majaribio nililo liita **dev** nitayalinganisha matawi haya na kulivuta lile lilo jipya kuliko mwezaka
 kwa kufanya hivi bofya hapo palipo andikwa **compare & pull request**
 
 ![github_pull_req](https://i.ibb.co/kq8r5rQ/github-compare-andpull.png)
