--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -394,7 +394,7 @@ Utaendelea naku bofya hapo palipo andikwa **create pull request**
 
 ![github_creat_pull_req](https://i.ibb.co/qdjB71V/github-creat-pul-req.png)
 
-Kuunganisha **"Merge"** utafanya hivi
+Kuunganisha **"Merge"** uta bofya hicho kitufe kilicho andikwa **Merge pull request** kama hivi
 
 ![github_mergpull_req](https://i.ibb.co/qBp6ckH/github-merge-pull-req.png)
 
