--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -83,7 +83,7 @@ mfumo mahususi wa udhibiti wa toleo ulio sambanzwa ambao chanzo chake cha code k
 Tafsiri yake ni kwamba chanzo cha code na historia inapatikana kwenye computer ya kila mwendelezaji na kurahisisha utowaji wa matawi na unganishaji
 
 
-usanifu wa code utakua unazingatia kanuni za ECMAScript 6 === ES6
+usanifu wa code utakua unazingatia kanuni za **ECMAScript 6 === ES6**
 
 **JavaScript** ni alama ya biyashara ya [Oracle](https://www.oracle.com/id/index.html) ambayo waliirithi kutoka Sun. 
 Kwa hiyo jina lililo rasimi la *javascript* ni **ECMAScript** jina hili linatoka kwenye shirika la kusimami viwango 
@@ -159,7 +159,7 @@ Kabla yakuendelea ningependa ufahamuu kwamba mpangilio wa mafaili nitakao tumia 
 
 Nitatumia **PascalCasing** kuvipa majina vifaa vyangu na **CamelCasing** nitatumia kwenye majina ya directors/folders.  
 
->>Kwa juu juu tutakua na kitu kama hiki kumbukumbu huu hapa nimfano tu, siyo mpangilio uliyo kamilika kwa mpangilio uliyo kamilika nenda kwenye hathina yetu ya  github. 
+>>Kwa juu juu tutakua na kitu kama hiki kumbuka huu hapa nimfano tu, siyo mpangilio uliyo kamilika kwa mpangilio uliyo kamilika nenda kwenye hathina yetu ya  github. 
 
 ```
 public 
@@ -308,12 +308,12 @@ na zile za **Create React App** au **Next.js** nk,  `JSX transform` , `Babel` na
 kuweka kwenye **DOM** tunatumia `document.getElementById('root')` msisitizo ukiwa kwenye **“root”** DOM node 
 
 
->> Tafsiri yake ni kwamba kwenye kitu cha div ambacho kipo kwenye hati ya html ndiyo tunataka tuone hiki kipengele
+>> Tafsiri yake ni kwamba kwenye kitu cha `div` ambacho kipo kwenye **hati ya html** ndiyo tunataka tuone hiki kipengele
 
 
 **Vercel kama computer ya kuendeshea code**
 
-Ili kuweza kukiona hicho kipengele nakili **copy** link ya hazina yako alafu uchanja mbuga na kivinjari chako hadi **Vercel** hapa ndipo tutakapo endeshea code zetu inaingiliana vizuri sana na bomba la kuendeleza usambazaji la **Github**  
+Ili kuweza kukiona hicho kipengele nakili **"copy"** link ya hazina yako alafu uchanja mbuga na kivinjari chako hadi **Vercel** hapa ndipo tutakapo endeshea **code** zetu inaingiliana vizuri sana na bomba la kuendeleza usambazaji la **Github**  
 
 Baada ya kuingia ndani na account ya **github** nita **bofya** kitufe kilicho andikwa **new repo** alafu nita **bofya impor git repository** naku **paste** ile **link** ya **hazina** yangu kwa vile ni mara ya kwanza intanilazimu ni **install** app ya **Vercel**, github. Ili kuipa uwezo **vercel** kusoma na kuandika kwenye **hathina** zangu za **Github** angalia hapa 
 
@@ -336,7 +336,7 @@ Baada ya kuingia ndani na account ya **github** nita **bofya** kitufe kilicho an
 Bilashaka umefanikiwa kuona **kipengele** cha **react** kikipachikwa kwenye **HTML DOM** na kikitolewa kwenye **kivinjari** chako
 umeona mnyororo wa bomba la upelekeji na uendlezaji application upande-wambele.
 
-Ngoja kidogo siyo haraka kihivyo...tunachangamoto kwenye code sijasema bug
+Ngoja kidogo siyo haraka kihivyo...tunachangamoto kwenye code sijasema **bug**
 nyenzo tuliyo tumia **ReactDOM** njia hii ni yakizamiani na taratibu, uzamani labda si yo 
 hoja sana lakini kwenye utaratib hapa kuna ukakasi utaribu wenye haswa
 una sababishwa na iletabia yake ya kuto tene kipengele moja kwa moja kwenye **DOM** husika 
@@ -354,7 +354,7 @@ Bilashaka unaona kitu kamahiki, sasa twende tukafanye marekebisho kwenye code
 
 ![github_branch](https://i.ibb.co/L9rL2QY/github-branch-dev.png)
 
-kwa kutumia kisasisha cha github sasisha faili la index.js nauweke hizi code, ukimaliza bofya hapo palipo andikwa **commit changes**
+Hakikisha uko kwenye **tawi** la dev kwa kutumia kisasisha cha github sasisha faili la **index.js** nauweke hizi code, ukimaliza bofya hapo palipo andikwa **commit changes**
 
 ```javascript
 import { StrictMode } from "react";
@@ -371,9 +371,9 @@ root.render(
 ```
 
 `createRoot` **React** itatengeneza mzizi kwenye **Domnode**, na kuchukua utawala wa dom ndani yake.
-React dom ni dom ya nadharia **"virtual Dom"**, ukiachilia mbali uwezo wa virtual dom
+React dom ni dom ya nadharia **"virtual Dom"**, ukiachilia mbali uwezo wa "virtual dom"
 kufanya kazi kwenye kumbukumbu ya kivinjari, pale yanapotoke mabadiliko 
-virtual Dom italinganisha na Dom asili naku sasisha vipengele vilivyo badilika kwenye Dom asili 
+**Dom ya nadharia** italinganisha na Dom asili naku sasisha vipengele vilivyo badilika kwenye Dom asili 
 hii inaongeza ufanisi kwa viwango vya hali ya juu
 
 
@@ -382,7 +382,7 @@ kwenye Dom natumia `root.render`
 
 
 Sasa hivi tuna matoleo mawili ambayo tumesha ya peleka **"deploy"** nayo ni **production** na **preview**, 
-**preview** ikiwa inatokana na **tawi** la **dev** ambayo hasa ni nakala ya tawi la **main** 
+**preview** ikiwa inatokana na **tawi** la **dev** ambayo hasa ni nakala ya **tawi** la **main** 
 
 ili kuhakikisha tawi letu ambalo liko kazini kiuzalishaji zaidi linakwenda sawa na tawi
 la majaribio nililo liita **dev** nitayalinganisha matawi haya na kulivuta lile lilo jipya kuliko mwezaka
@@ -400,7 +400,7 @@ Kuunganisha **"Merge"** uta bofya hicho kitufe kilicho andikwa **Merge pull requ
 
 
 **thibitisha kuunganisha na mara baada ya kuthibisha ukirudi kwenye code ukiwa kwenye 
-tawi kuu **main** haitakuwa na utofauti na ile ya **dev**
+tawi **kuu** "main" halitakuwa na utofauti na lile la **dev**
 
 
 
@@ -408,7 +408,7 @@ Baada ya **DOM** kutubainikia na **JSX** kujitokeza ingependeza kama tunge viang
 kwa ndani kidogo ilikuweza kuelewa dhana na kuitumia React kwa ufasaha kwenye kuendeleza au kujenga
 **vipengela anavyo ingiliana navyo mtumiaji** kwa maana ya **"user interfaces" (UI)** kwenye muktadha huu.
 
-Kumbuka tu kwamba **kipengele** cha reat ni **kazi** ya javascript ambayo unaweza kuiwekea nakshi kwa kutumia alama za juu 
+Kumbuka tu kwamba **kipengele** cha react ni **kazi ya javascript** ambayo unaweza kuiwekea nakshi kwa kutumia alama za juu 
 kitaalam tuna sema **Functional Component** ili kuweza kuzielewa...twende kwa vitendo 
 
 
